--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
@@ -35,12 +36,15 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.0"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'org.kodein.di:kodein-di-framework-android-x:7.5.0'
     implementation "io.ktor:ktor-client-core:1.5.4"
     implementation "io.ktor:ktor-client-cio:1.5.4"
+    implementation "io.ktor:ktor-client-json:1.5.4"
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation(project(':domain'))
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
