--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -30,14 +30,26 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
+    implementation 'org.kodein.di:kodein-di-framework-android-x:7.5.0'
+    implementation "com.github.adrielcafe:dalek:1.0.2"
+    implementation 'com.xwray:groupie:2.9.0'
+    implementation "com.xwray:groupie-viewbinding:2.9.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    implementation "io.coil-kt:coil:1.2.1"
+    implementation(project(":domain"))
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
